updating home page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     </div>
 
     <h3>By Day</h3>
-    <p>I'm currently on a personal sabbatical, exploring opportunities in tech policy as well as doing some personal
-      education to eventually re-enter the Trust and Safety engineering world.</p>
-    <p>Previously, I was a data engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>, supporting
+    <p>I am currently a Senior Software Engineer on the Safety Machine Learning team at <a class="link" href="https://discord.com/">Discord.</a></p>
+    <p>Previously, I contributed Trust and Safety and software engineering capacity to <a class="link" href="https://projectprotocol.org/">Project Protocol</a>, was a data engineer at <a class="link" href="https://recidiviz.org">Recidiviz</a>, supporting
       platform expansion for nudging criminal justice agencies towards decarceration, and an ML engineer at <a
         class="link" href="https://about.twitter.com/">Twitter</a>, working on
       detections and remediations that supported user trust
@@ -43,8 +42,7 @@
       policy, socio-political and justice-oriented technology</p>
 
     <h3>By Night</h3>
-    <p>I help organize the <a class="link" href="https://ebabz.org/">East Bay Alternative Books and Zines Fest</a> and
-      was both a cohort member and now a co-steward of <a class="link" href="https://school.logicmag.io/">Collective
+    <p>I was both a cohort member and now a co-steward of <a class="link" href="https://school.logicmag.io/">Collective
         Action School</a>
       (formerly Logic School), a community school for tech workers.</p>
     <p>I dabble in
